--- a/client/public/index.html
+++ b/client/public/index.html
@@ -3,22 +3,52 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Video Gallery</title>
-    <link rel="stylesheet" href="src/css/style.css" />
+    <title>Player Hub - Home</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700;800&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="src/css/style.css" />
   </head>
   <body>
-    <!-- Replace your old <nav> with this -->
     <nav class="navbar">
       <div class="nav-container">
-        <a href="index.html" class="nav-brand">Player Hub</a>
+        <a href="index.html" class="nav-brand">
+          <svg
+            width="32"
+            height="32"
+            viewBox="0 0 24 24"
+            fill="none"
+            xmlns="http://www.w3.org/2000/svg"
+          >
+            <path
+              d="M12 2L2 7V17L12 22L22 17V7L12 2Z"
+              stroke="currentColor"
+              stroke-width="2"
+              stroke-linecap="round"
+              stroke-linejoin="round"
+            />
+            <path
+              d="M2 7L12 12L22 7"
+              stroke="currentColor"
+              stroke-width="2"
+              stroke-linecap="round"
+              stroke-linejoin="round"
+            />
+            <path
+              d="M12 12V22"
+              stroke="currentColor"
+              stroke-width="2"
+              stroke-linecap="round"
+              stroke-linejoin="round"
+            />
+          </svg>
+          <span>Player Hub</span>
+        </a>
         <div class="nav-links">
-          <a href="index.html">Videos</a>
+          <a href="index.html">Home</a>
           <a href="register.html">Register</a>
           <a href="players.html">Player List</a>
           <a href="contact.html">Contact</a>
@@ -42,25 +72,55 @@
         </button>
       </div>
       <div class="mobile-nav" id="mobile-nav">
-        <a href="index.html">Videos</a>
+        <a href="index.html">Home</a>
         <a href="register.html">Register</a>
         <a href="players.html">Player List</a>
         <a href="contact.html">Contact</a>
       </div>
     </nav>
+
+    <!-- Hero Section -->
+    <header class="hero">
+      <div class="hero-content">
+        <h1 class="hero-title">Connect, Showcase, and Discover Talent</h1>
+        <p class="hero-subtitle">
+          The ultimate platform for players and teams to unite. Register today
+          to get on the roster and explore the community.
+        </p>
+        <div class="hero-cta">
+          <a href="register.html" class="btn btn-primary">Join the Roster</a>
+          <a href="#video-gallery" class="btn btn-secondary"
+            >Watch Highlights</a
+          >
+        </div>
+      </div>
+    </header>
+
     <main class="container">
-      <h1>Featured Videos</h1>
-      <div class="video-grid" id="video-grid"></div>
+      <!-- Video Gallery Section -->
+      <section id="video-gallery">
+        <h1>Featured Videos</h1>
+        <p class="page-subtitle">
+          Curated highlights and tutorials from the best in the game.
+        </p>
+        <div id="video-grid" class="video-grid">
+          <!-- Videos will be dynamically inserted here -->
+        </div>
+      </section>
     </main>
+
+    <!-- Modal for Video Player -->
     <div id="video-modal" class="modal">
       <div class="modal-content">
         <span class="close-button">&times;</span>
         <div id="video-player"></div>
       </div>
     </div>
-    <script type="module" src="src/js/main.js"></script>
+
     <footer class="site-footer">
       <p>&copy; 2025 Player Hub. All Rights Reserved.</p>
     </footer>
+
+    <script type="module" src="src/js/main.js"></script>
   </body>
 </html>
