--- a/client/public/contact.html
+++ b/client/public/contact.html
@@ -15,6 +15,7 @@
       href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap"
       rel="stylesheet"
     />
+    <script src="https://js.hcaptcha.com/1/api.js" async defer></script>
   </head>
   <body>
     <nav class="navbar">
@@ -54,6 +55,8 @@
         </a>
         <div class="nav-links">
           <a href="index.html">Home</a>
+          <!-- NEW LINK ADDED HERE -->
+          <a href="events.html">Events</a>
           <a href="register.html">Register</a>
           <a href="players.html">Player List</a>
           <a href="contact.html">Contact</a>
@@ -78,6 +81,8 @@
       </div>
       <div class="mobile-nav" id="mobile-nav">
         <a href="index.html">Home</a>
+        <!-- NEW LINK ADDED HERE -->
+        <a href="events.html">Events</a>
         <a href="register.html">Register</a>
         <a href="players.html">Player List</a>
         <a href="contact.html">Contact</a>
@@ -99,6 +104,10 @@
           <label for="message">Message*</label
           ><textarea id="message" name="message" rows="5" required></textarea>
         </div>
+        <div
+          class="h-captcha"
+          data-sitekey="82bea29e-ff30-4602-8a74-eb221cc06f56"
+        ></div>
         <button type="submit" class="btn">Send Message</button>
         <p id="contact-form-message"></p>
       </form>
