feat : add client entry point

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -16,6 +16,7 @@
     <nav class="navbar">
       <div class="nav-container">
         <a href="index.html" class="nav-brand">
+          <!-- SVG Logo -->
           <svg
             width="32"
             height="32"
@@ -49,6 +50,8 @@
         </a>
         <div class="nav-links">
           <a href="index.html">Home</a>
+          <!-- NEW LINK ADDED HERE -->
+          <a href="events.html">Events</a>
           <a href="register.html">Register</a>
           <a href="players.html">Player List</a>
           <a href="contact.html">Contact</a>
@@ -73,6 +76,8 @@
       </div>
       <div class="mobile-nav" id="mobile-nav">
         <a href="index.html">Home</a>
+        <!-- NEW LINK ADDED HERE -->
+        <a href="events.html">Events</a>
         <a href="register.html">Register</a>
         <a href="players.html">Player List</a>
         <a href="contact.html">Contact</a>
