--- a/client/public/players.html
+++ b/client/public/players.html
@@ -50,6 +50,8 @@
         </a>
         <div class="nav-links">
           <a href="index.html">Home</a>
+          <!-- NEW LINK ADDED HERE -->
+          <a href="events.html">Events</a>
           <a href="register.html">Register</a>
           <a href="players.html">Player List</a>
           <a href="contact.html">Contact</a>
@@ -74,6 +76,8 @@
       </div>
       <div class="mobile-nav" id="mobile-nav">
         <a href="index.html">Home</a>
+        <!-- NEW LINK ADDED HERE -->
+        <a href="events.html">Events</a>
         <a href="register.html">Register</a>
         <a href="players.html">Player List</a>
         <a href="contact.html">Contact</a>
