--- a/client/public/register.html
+++ b/client/public/register.html
@@ -11,6 +11,7 @@
       href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap"
       rel="stylesheet"
     />
+    <script src="https://js.hcaptcha.com/1/api.js" async defer></script>
   </head>
   <body>
     <!-- ... inside the <body> tag ... -->
@@ -51,6 +52,8 @@
         </a>
         <div class="nav-links">
           <a href="index.html">Home</a>
+          <!-- NEW LINK ADDED HERE -->
+          <a href="events.html">Events</a>
           <a href="register.html">Register</a>
           <a href="players.html">Player List</a>
           <a href="contact.html">Contact</a>
@@ -75,6 +78,8 @@
       </div>
       <div class="mobile-nav" id="mobile-nav">
         <a href="index.html">Home</a>
+        <!-- NEW LINK ADDED HERE -->
+        <a href="events.html">Events</a>
         <a href="register.html">Register</a>
         <a href="players.html">Player List</a>
         <a href="contact.html">Contact</a>
@@ -105,6 +110,10 @@
           <label for="position">Position</label
           ><input type="text" id="position" name="position" />
         </div>
+        <div
+          class="h-captcha"
+          data-sitekey="82bea29e-ff30-4602-8a74-eb221cc06f56"
+        ></div>
         <button type="submit" class="btn">Register</button>
         <p id="form-message"></p>
       </form>
